# Soranaflow

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  PRIVACY.md  README.md  TERMS.md  VERIFICATION-REPORT-FINAL.md
docs/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ANALYSIS_v2.md  VERIFICATION_REPORT.md
packaging/macos/: Info.plist  SoranaFlow.entitlements  build_uninstaller.sh  create_dmg.sh
resources/: resources.qrc
resources/icons/: SoranaFlow.icns
resources/js/: musickit.min.js
resources/styles/: dark-theme.qss  light-theme.qss
scripts/: adhoc_sign.sh  cleanup_bundle.sh  deploy.sh  generate_developer_token.sh
src/: main.cpp
src/apple/: AppleMusicBridge.mm  AppleMusicManager.h  MusicKitPlayer.cpp  MusicKitPlayer.h  MusicKitPlayer.mm  MusicKitStateMachine.cpp  MusicKitStateMachine.h  MusicKitSwiftBridge.swift
src/config/: ApiKeys.h.in
src/core/: CoverArtLoader.cpp  CoverArtLoader.h  CrashHandler.cpp  CrashHandler.h  IStreamingService.h  MusicData.cpp  MusicData.h  PlaybackState.cpp  PlaybackState.h  QueueManager.cpp  QueueManager.h  QueuePersistence.cpp  QueuePersistence.h  ServiceLocator.h  Settings.cpp  Settings.h  ThemeManager.cpp  ThemeManager.h
src/core/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  AudioFormat.h  AudioRenderChain.cpp  AudioRenderChain.h  DSDDecoder.cpp  DSDDecoder.h  GaplessManager.cpp  GaplessManager.h  IDecoder.h  MetadataReader.cpp  MetadataReader.h  SignalPathBuilder.cpp  SignalPathBuilder.h  SignalPathInfo.h  TagWriter.cpp  TagWriter.h  VolumeLevelingManager.cpp  VolumeLevelingManager.h
src/core/dsp/: ConvolutionProcessor.cpp  ConvolutionProcessor.h  CrossfeedProcessor.cpp  CrossfeedProcessor.h  DSPPipeline.cpp  DSPPipeline.h  EqualizerProcessor.cpp  EqualizerProcessor.h  GainProcessor.h  HRTFProcessor.cpp  HRTFProcessor.h  IDSPProcessor.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  LoudnessContour.h  ReplayGainScanner.cpp  ReplayGainScanner.h  UpsamplerProcessor.cpp  UpsamplerProcessor.h
src/core/lyrics/: LyricsProvider.cpp  LyricsProvider.h
src/metadata/: AcoustIdProvider.cpp  AcoustIdProvider.h  AudioFingerprinter.cpp  AudioFingerprinter.h  CoverArtProvider.cpp  CoverArtProvider.h  FanartTvProvider.cpp  FanartTvProvider.h  MetadataService.cpp  MetadataService.h  MusicBrainzProvider.cpp  MusicBrainzProvider.h  RateLimiter.cpp  RateLimiter.h
src/platform/: AudioDevice.h  IAudioOutput.h
src/platform/macos/: AudioProcessTap.h  AudioProcessTap.mm  BookmarkManager.h  BookmarkManager.mm  CoreAudioOutput.cpp  CoreAudioOutput.h  MacMediaIntegration.h  MacMediaIntegration.mm  MacUtils.h  MacUtils.mm  SparkleUpdater.h  SparkleUpdater.mm
src/plugins/: VST2Host.cpp  VST2Host.h  VST2Plugin.cpp  VST2Plugin.h  VST3Host.cpp  VST3Host.h  VST3Plugin.cpp  VST3Plugin.h
src/radio/: AutoplayManager.cpp  AutoplayManager.h  LastFmProvider.cpp  LastFmProvider.h
src/tidal/: TidalManager.cpp  TidalManager.h
src/ui/: AppSidebar.cpp  AppSidebar.h  MainWindow.cpp  MainWindow.h  MenuBarManager.cpp  MenuBarManager.h  PlaybackBar.cpp  PlaybackBar.h  SoranaFlowLogo.cpp  SoranaFlowLogo.h
src/ui/amview/: AMAlbumPanel.cpp  AMAlbumPanel.h  AMArtistPanel.cpp  AMArtistPanel.h  AMContentPanel.cpp  AMContentPanel.h  AMSearchPanel.cpp  AMSearchPanel.h
src/ui/dialogs/: AutoOrganizeDialog.cpp  AutoOrganizeDialog.h  MetadataSearchDialog.cpp  MetadataSearchDialog.h  NewPlaylistDialog.cpp  NewPlaylistDialog.h  StyledMessageBox.cpp  StyledMessageBox.h  TagEditorDialog.cpp  TagEditorDialog.h
src/ui/playbackbar/: DeviceVolumeControl.cpp  DeviceVolumeControl.h  NowPlayingInfo.cpp  NowPlayingInfo.h  TransportControls.cpp  TransportControls.h
src/ui/services/: CoverArtService.cpp  CoverArtService.h  MetadataFixService.cpp  MetadataFixService.h  NavigationService.cpp  NavigationService.h
src/ui/views/: AlbumDetailView.cpp  AlbumDetailView.h  AlbumsView.cpp  AlbumsView.h  AppleMusicView.cpp  AppleMusicView.h  ArtistDetailView.cpp  ArtistDetailView.h  ArtistsView.cpp  ArtistsView.h  FolderBrowserView.cpp  FolderBrowserView.h  LibraryView.cpp  LibraryView.h  NowPlayingView.cpp  NowPlayingView.h  PlaylistDetailView.cpp  PlaylistDetailView.h  PlaylistsView.cpp  PlaylistsView.h  QueueView.cpp  QueueView.h  SearchResultsView.cpp  SearchResultsView.h  SettingsView.cpp  SettingsView.h  TidalView.cpp  TidalView.h
src/ui/views/settings/: AboutSettingsTab.cpp  AboutSettingsTab.h  AppearanceSettingsTab.cpp  AppearanceSettingsTab.h  AppleMusicSettingsTab.cpp  AppleMusicSettingsTab.h  AudioSettingsTab.cpp  AudioSettingsTab.h  DSPSettingsWidget.cpp  DSPSettingsWidget.h  EQSettingsWidget.cpp  EQSettingsWidget.h  LibrarySettingsTab.cpp  LibrarySettingsTab.h  OutputSettingsWidget.cpp  OutputSettingsWidget.h  ProcessingSettingsWidget.cpp  ProcessingSettingsWidget.h  SettingsUtils.h  SpatialSettingsWidget.cpp  SpatialSettingsWidget.h  VSTSettingsWidget.cpp  VSTSettingsWidget.h
src/widgets/: FormatBadge.cpp  FormatBadge.h  LyricsWidget.cpp  LyricsWidget.h  SignalPathWidget.cpp  SignalPathWidget.h  StyledButton.cpp  StyledButton.h  StyledComboBox.cpp  StyledComboBox.h  StyledInput.cpp  StyledInput.h  StyledScrollArea.cpp  StyledScrollArea.h  StyledSlider.cpp  StyledSlider.h  StyledSwitch.cpp  StyledSwitch.h  TrackRow.cpp  TrackRow.h  TrackTableView.cpp  TrackTableView.h
tests/: CMakeLists.txt  stubs_VolumeLeveling.cpp  tst_LibraryDatabase.cpp  tst_MusicKitStateMachine.cpp  tst_QueueManager.cpp  tst_ServiceLocator.cpp  tst_SignalPathBuilder.cpp  tst_SignalPathInfo.cpp  tst_VolumeLevelingManager.cpp
translations/: soranaflow_ja.qm  soranaflow_ja.ts  soranaflow_ko.qm  soranaflow_ko.ts  soranaflow_zh.qm  soranaflow_zh.ts  translations.qrc
